# geosampa

./: .env.example  .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml
src/geosampa_lote_analyzer/: __init__.py  __main__.py  cli.py  config.py  logging_config.py
src/geosampa_lote_analyzer/clients/: ckan.py  geosampa_metadata.py  geosampa_wfs.py
src/geosampa_lote_analyzer/domain/: cadastral_divergence.py  constants.py  document_references.py  drawings.py  keywords.py  legislation.py  models.py  occupation.py  pdf_documents.py  risk.py  source_keywords.py  sources.py
src/geosampa_lote_analyzer/services/: cadastral_divergence_service.py  document_reference_service.py  dossier_service.py  drawing_association_service.py  intersection_service.py  layer_discovery_service.py  legal_validation_service.py  legislation_lookup_service.py  lote_service.py  map_service.py  occupation_service.py  pdf_document_service.py  report_service.py  risk_matrix_service.py  source_discovery_service.py  summary_service.py  validation_matrix_service.py
src/geosampa_lote_analyzer/utils/: cql.py  files.py  geo.py  text.py
tests/: test_cadastral_divergence_service.py  test_cql.py  test_document_reference_service.py  test_dossier_service.py  test_drawing_association_service.py  test_geo.py  test_layer_discovery.py  test_legal_validation_service.py  test_legislation_lookup_service.py  test_lote_service.py  test_occupation_service.py  test_pdf_document_service.py  test_risk_matrix_service.py  test_source_discovery.py  test_summary_service.py  test_validation_matrix_service.py
